# datadirswx

./: .gitignore  CMakeLists.txt  README.md  datadirswx.cpp  testenv.ps1
.github/workflows/: build.yaml  win.yaml
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
